show page recommends

--- a/views/profiles/new.ejs
+++ b/views/profiles/new.ejs
@@ -78,9 +78,9 @@
                 </div>
                 <div class="form-group">
                     <label>Tell us 3 businesses or establishments that you would recommend for a great experience</label>
-                    <p class="form-control">1. <input type="text" name="recommendsFirst" maxlength="100" required></p>
-                    <p class="form-control">2. <input type="text" name="recommendsSecond" maxlength="100" required></p>
-                    <p class="form-control">3. <input type="text" name="recommendsThird" maxlength="100" required></p>
+                    <p class="form-control"><i class="fa fa-coffee" aria-hidden="true"></i> <input type="text" name="recommendsFirst" maxlength="100" required></p>
+                    <p class="form-control"><i class="fa fa-cutlery" aria-hidden="true"></i> <input type="text" name="recommendsSecond" maxlength="100" required></p>
+                    <p class="form-control"><i class="fa fa-glass" aria-hidden="true"></i> <input type="text" name="recommendsThird" maxlength="100" required></p>
                 </div>
                 <div class="form-group">
                     <button class="btn btn-lg btn-outline-primary btn-block">Submit</button>
