--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,10 @@
       <link rel="stylesheet" href="/stylesheets/main.css">
       <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto" rel="stylesheet">        
       <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+      <!-- Material Design Bootstrap -->
+      <!--  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.0/css/mdb.min.css" rel="stylesheet">-->
       <script src="https://use.fontawesome.com/75feccbb72.js"></script>
+      
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
