--- a/views/profiles/show.ejs
+++ b/views/profiles/show.ejs
@@ -33,7 +33,7 @@
                     </div>
             </div>
         </div>
-        <div class="col-xs-6 col-sm-3 mb20">
+        <div class="col-xs-12 col-lg-3 mb20">
                 <h2 id="mtp-h4">I recommend you try</h2>
                 <div class="list-group">
                     <ul class="social-list">
