add privacy and terms

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,6 +19,7 @@
                     <input class="btn btn-lg btn-outline-primary btn-block" type="submit" value="Login">
                 </div>
             </form>
+            <p>Dont have and account? <a href="/register">Sign up</a></p>
         </div>
     </div>
 </div>
