--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,7 +19,7 @@
     <a href="#" class="hidden-lg-up my-2 mr-3" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false">
         <i class="fa fa-bars"></i>
     </a>
-    <a class="navbar-brand" href="/">MEETTHEPEOPLE<span id="beta">beta</span></a>
+    <a class="navbar-brand" href="https://meetthepeople.co/">MEETTHEPEOPLE<span id="beta">beta</span></a>
     <div class="navbar-collapse collapse flex-md-unordered flex-last" id="navbarCollapse">
                 <% if(!currentUser) { %>
                 <ul class="navbar-nav">
