--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,6 +2,10 @@ body {
     font-family: Roboto,sans-serif; 
 } 
 
+nav {
+    margin-bottom: 10px;
+}
+
 p {
     font-family: Roboto,sans-serif;
 }
