--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,16 +8,16 @@
             <form action="/register" method="POST">
                 <div class="form-group">
                     <label>Username</label>
-                    <input class="form-control" type="text" name="username" placeholder="Minimum 8 characters">
+                    <input class="form-control" type="text" name="username" placeholder="Minimum 8 characters" required>
                 </div>
                 <div class="form-group">
                     <label>Password</label>
-                    <input class="form-control" type="password" name="password" placeholder="Minimum 8 characters">
+                    <input class="form-control" type="password" name="password" placeholder="Minimum 8 characters" required>
                 </div>
                 <label class="custom-control custom-checkbox">
-                  <input type="checkbox" class="custom-control-input">
+                  <input type="checkbox" class="custom-control-input" required>
                   <span class="custom-control-indicator"></span>
-                  <span class="custom-control-description">I accept MTP's terms and privacy policy</span>
+                  <span class="custom-control-description">I accept MTP's <a href="/terms" class="text-primary" target="blank">terms of service</a>, <a href="/privacy" class="text-primary" target="blank">privacy policy.</a> and that MTP may also send me news or updates from time to time.</span>
                 </label>
                 <br>
                 <div class="form-group">
