--- a/views/jobs/joblist.ejs
+++ b/views/jobs/joblist.ejs
@@ -16,16 +16,10 @@
     </div>
 
     <table class="table table-hover">
-            <tr class="active">
-                <th >Business Name</th>
-                <th >Vacant Role</th>
-                <th> </th>
-            </tr> 
         <% jobs.forEach(function(job){ %>
             <tr>
-                <th id="#mtp-h1"><strong><%=job.jobVenueName%></strong> is looking for a</th>
-                <th id="#mtp-h1"><strong><%= job.jobRole %></strong></th>
-                <th align="center"><a href="/jobs/<%= job._id %>" class="btn btn-outline-primary btn-sm">Learn More</a></th>
+                <th id="#mtp-h1"><strong><%=job.jobVenueName%></strong> is looking for a <strong><%= job.jobRole %></strong></th>
+                <th><a href="/jobs/<%= job._id %>" class="btn btn-outline-primary btn-sm">Learn More</a></th>
             </tr>    
         <% }); %> 
     </table>
