--- a/views/jobs/postjob.ejs
+++ b/views/jobs/postjob.ejs
@@ -20,6 +20,11 @@
                     <input class="form-control" type="text" name="jobVenueName" placeholder="Best place to work I'm sure">
                 </div>
                 <div class="form-group">
+                    <label>Location</label>
+                    <input class="form-control" type="text" name="jobLocation" placeholder="Where is the job located">
+                    <input class="form-control" type="text" name="jobCountry" maxlength="3" placeholder="3 letter abbreviation please Ie. AUS" required>
+                </div>
+                <div class="form-group">
                     <label>Start Date</label>
                     <input class="form-control" type="text" name="jobStartDate" placeholder="Enter a start date">
                 </div>
