--- a/views/jobs/editjob.ejs
+++ b/views/jobs/editjob.ejs
@@ -3,25 +3,40 @@
 <a id="show-btn" class="btn btn-secondary btn-sm" href="/jobs">Back to jobs list</a>
     <div class="row">
         <div class="col-md-6 offset-md-3" style="text-align: center;" >
-            <h1 id="mtp-h1">Create a job ad</h1>
+            <h1 id="mtp-h1">Edit the <%= jobs.jobRole %> job post</h1>
             <p>Make it special. You want the best people</p>
             <br>
         </div>
     </div>
     <div>
-        <form action="/jobs" method="POST">
+        <form action="/jobs/<%= jobs._id %>?_method=PUT" method="POST">
             <div class="col-md-6 offset-md-3">
                 <div class="form-group">
                     <label>Job role</label>
-                    <input class="form-control" type="text" name="jobRole" placeholder="Job title can be creative of course">
+                    <input class="form-control" type="text" name="jobs[jobRole]" value="<%= jobs.jobRole %>">
                 </div>
                 <div class="form-group">
                     <label>Business Name</label>
-                    <input class="form-control" type="text" name="jobVenueName" placeholder="Best place to work I'm sure">
+                    <input class="form-control" type="text" name="jobs[jobVenueName]" value="<%= jobs.jobVenueName %>">
+                </div>
+                <div class="form-group">
+                    <label>Location</label>
+                    <input class="form-control" type="text" name="jobs[jobLocation]" value="<%= jobs.jobLocation %>">
+                    <input class="form-control" type="text" name="jobs[jobCountry]" value="<%= jobs.jobCountry %>">
+                </div>
+                <div class="form-group">
+                    <label>Start Date</label>
+                    <input class="form-control" type="text" name="jobs[jobStartDate]" value="<%= jobs.jobStartDate %>">
+                </div>
+                <div class="form-group">
+                    <label>Job Contact</label>
+                    <input class="form-control" type="text" name="jobs[jobContactName]" value="<%= jobs.jobContactName %>">
+                    <input class="form-control" type="text" name="jobs[jobContactPhone]" value="<%= jobs.jobContactPhone %>">
+                    <input class="form-control" type="email" name="jobs[jobContactEmail]" value="<%= jobs.jobContactEmail %>">
                 </div>
                 <div class="form-group">
                     <label>Job Description</label>
-                    <textarea class="form-control" rows="5" type="text" name="jobDescription" placeholder="Tell us what you are looking for"></textarea>
+                    <input class="form-control" type="text" name="jobs[jobDesc]" value="<%= jobs.jobDesc %>"></input>
                 </div>
                 <div class="form-group">
                     <button class="btn btn-lg btn-outline-primary btn-block">Submit</button>
