updated job list

--- a/views/jobs/joblist.ejs
+++ b/views/jobs/joblist.ejs
@@ -16,6 +16,11 @@
     </div>
 
     <table class="table table-hover">
+        <tr class="active">
+            <th>Hiring Business & Role</th>
+            <th>Location</th>
+            <th> </th>
+        </tr>
         <% jobs.forEach(function(job){ %>
             <tr>
                 <th id="#mtp-h1"><strong><%=job.jobVenueName%></strong> is looking for a <strong><%= job.jobRole %></strong></th>
