--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,51 @@
-        <footer>
+        <!--Footer-->
+        <footer class="page-footer font-small blue pt-4 mt-4">
+        
+            <!--Footer Links-->
+            <div class="container-fluid text-center text-md-left">
+                <div class="row">
+        
+                    <!--First column-->
+                    <div class="col-md-6">
+                        <h4 id="mtp-h4">Profiles by MeetThePeople</h4>
+                        <p>Share your own story by creating your own MeetThePeople profile. This can be used to find the perfect hospitality job with amazing community of people</p>
+                    </div>
+                    <!--/.First column-->
+        
+                    <!--Second column-->
+                    <div class="col-md-6">
+                        <h4 id="mtp-h4">Follow Us</h4>
+                        <ul class="list-unstyled">
+                            <li>
+                                <a href="https://www.facebook.com/meetthepeople.co/">Facebook</a>
+                            </li>
+                            <li>
+                                <a href="https://www.instagram.com/meetthepeople.co/">Instagram</a>
+                            </li>
+                            <li>
+                                <a href="https://twitter.com/bl_waller/">Twitter</a>
+                            </li>
+                            <li>
+                                <a href="mailto:brittanyleewaller@gmail.com">Email Us</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!--/.Second column-->
+                </div>
+            </div>
+            <!--/.Footer Links-->
+        
+            <!--Copyright-->
+            <div class="footer-copyright py-3 text-center">
+                © 2018 Copyright:
+                <a href="https://meetthepeople.co/"> meethepeople.co </a>
+            </div>
+            <!--/.Copyright-->
+        
+        </footer>
+        <!--/.Footer-->
+        
+        <!--<footer>
             <div class="container">
                 <div class="footer-section">
                         <h4 id="mtp-h4">Follow MEETTHEPEOPLE</h4>
@@ -10,7 +57,7 @@
                         </ul>
                 </div>
             </div>
-        </footer>
+        </footer>-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
         <!-- MDB core JavaScript -->
