--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
         <!--Footer-->
         <footer class="page-footer font-small blue pt-4 mt-4">
-        
+        <div class="container">
             <!--Footer Links-->
             <div class="container-fluid text-center text-md-left">
                 <div class="row">
@@ -41,7 +41,7 @@
                 <a href="https://meetthepeople.co/"> meethepeople.co </a>
             </div>
             <!--/.Copyright-->
-        
+        </div>
         </footer>
         <!--/.Footer-->
         
