--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -91,17 +91,22 @@ input.form-control::-webkit-input-placeholder { color: Silver; }  /* WebKit, Bli
 .card {
     flex: 0 1 24%;
     font-family: Oswald,sans-serif;
-    padding: 10px;
     margin-top: 10px;
+    box-shadow: 5px 5px 20px 0px rgba(0,0,0,0.15);
+}
+
+.card-text-padding {
+    padding: 10px;
 }
 
 .card-title {
-    text-transform: uppercase;
     padding-top: 20px;
+    font-size: 1.5em;
 }
 
 .card-text {
     padding-bottom: 10px;
+    font-family: Roboto,sans-serif;
 }
 
 #card-no-outline {
