--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -20,14 +20,14 @@
     <section class="cards">
             <% profiles.forEach(function(profile){ %>
                     <div class="card">
-                            <picture class="thumbnail">
-                                <img class="card-img-top img-fluid" src="<%= profile.image %>">
-                            </picture>
-                            <h4 class="card-title"><%=profile.name%></h4>
-                            <p class="card-text"><%= profile.role %> @ <strong><%= profile.venue %></strong></p>
-                            <p>
-                                <a href="/profiles/<%= profile._id %>" class="btn btn-outline-info">Meet Me</a>
-                            </p>
+                            <img class="card-img-top img-fluid" src="<%= profile.image %>">
+                            <div class="card-text-padding">
+                                <h4 id="mtp-h1"><%=profile.name%></h4>
+                                <p class="card-text"><%= profile.role %> @ <strong><%= profile.venue %></strong></p>
+                                <p>
+                                    <a href="/profiles/<%= profile._id %>" class="btn btn-outline-info">Meet Me</a>
+                                </p>
+                            </div>
                     </div>
             <% }); %>    
     </section>
