--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -91,7 +91,8 @@ input.form-control::-webkit-input-placeholder { color: Silver; }  /* WebKit, Bli
 .card {
     flex: 0 1 24%;
     font-family: Oswald,sans-serif;
-    margin-top: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     box-shadow: 5px 5px 20px 0px rgba(0,0,0,0.15);
 }
 
