--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -103,6 +103,8 @@ input.form-control::-webkit-input-placeholder { color: Silver; }  /* WebKit, Bli
 .card-title {
     padding-top: 20px;
     font-size: 1.5em;
+    text-transform: uppercase;
+    font-family: Oswald,sans-serif;
 }
 
 .card-text {
