--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -96,7 +96,7 @@ input.form-control::-webkit-input-placeholder { color: Silver; }  /* WebKit, Bli
     flex: 0 1 24%;
     font-family: Oswald,sans-serif;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     box-shadow: 5px 5px 20px 0px rgba(0,0,0,0.15);
 }
 
@@ -114,7 +114,14 @@ input.form-control::-webkit-input-placeholder { color: Silver; }  /* WebKit, Bli
 .card-text {
     padding-bottom: 10px;
     font-family: Roboto,sans-serif;
-    font-size: 0.9em;
+    font-size: 1.1em;
+}
+
+#card-recommend {
+    background-color: #85e2c5;
+    color: white;
+    padding-top: 10px;
+    border: none;
 }
 
 #card-no-outline {
@@ -173,7 +180,7 @@ input.form-control::-webkit-input-placeholder { color: Silver; }  /* WebKit, Bli
 
 .social-list li {
     font-size: 1.3em;
-    padding-top: 0.5em;
+    padding-top: 0.2em;
 }
 
 #mtp-h1 {
